# Crescent

./: AGENTS.md  Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
core/src/accounts/: mod.rs
core/src/minecraft/: mod.rs
